--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost/dahor/index.html",
+            "url": "http://localhost/dahor/landing-page.html",
             "webRoot": "${workspaceFolder}"
         }
     ]
